# ChangeLog for app-shells/gentoo-bashcomp
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/gentoo-bashcomp/ChangeLog,v 1.21 2009/02/21 20:29:09 darkside Exp $

*gentoo-bashcomp-20080521-r1 (21 Feb 2009)

  21 Feb 2009; Jeremy Olexa <darkside@gentoo.org>
  +gentoo-bashcomp-20080521-r1.ebuild:
  Now use the 'eselect way' for gentoo-bashcomp. This is desired for future
  development of the gentoo bash-completion modules

*gentoo-bashcomp-20080521 (21 May 2008)

  21 May 2008; Tristan Heaven <nyhm@gentoo.org>
  +gentoo-bashcomp-20080521.ebuild:
  Version bump

  04 May 2008; Peter Volkov <pva@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Use berlios mirror://, bug #218657, thank Gilles Dartiguelongue for
  report.

  27 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Remove NEWS from dodoc, bug #203330

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  25 Nov 2005; Tom Gall <tgall@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  stable on ppc64

  28 Jun 2005; Joshua Kinard <kumba@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Marked stable on mips.

  18 Jun 2005; Fernando J. Pereda <ferdy@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Stable on alpha

  04 Jun 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Stable on ppc.

  30 May 2005; Christian Birchinger <joker@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Added sparc stable keyword

  29 May 2005; Marcus D. Hanwell <marcus@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Stable on amd64.

  29 May 2005; Rene Nussbaumer <killerfox@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Stable on hppa.

  28 May 2005; Aaron Walker <ka0ttic@gentoo.org>