@@ -1,7 +1,9 @@
 DIST gentoo-bashcomp-20050516.tar.bz2 20330 RMD160 9915f073c218b683bbf75f82df982eda41c2f5e3 SHA1 713167567b4323f9ffcca9c38ee58f3b23b41fdd SHA256 7b9588997873078694a5696b797996fc75b6149e2dc522ee87f451a532c4208c
 DIST gentoo-bashcomp-20080521.tar.bz2 20667 RMD160 926bed30455cd7d6062a5f3258726de800789286 SHA1 38845f1d6b5b430684a2690e9ffa267c591ea4b2 SHA256 faa2b2291ccb620ec89c55516b6aab8fead729d5dc83fa079ab5f44eb3ec182f
+DIST gentoo-bashcomp-20090222.tar.bz2 20852 RMD160 adf75e25480827ef7b35da262ca0512df435907b SHA1 472cc282387bfe1810b8ed2b00152fb5f76666c4 SHA256 d8df4f9babab6101602c5a7069d80daac9defc9d9683f5b4a91671ae40c83b39
 EBUILD gentoo-bashcomp-20050516.ebuild 1022 RMD160 ca52165fad387cde01b2077a8352ee8445fbfda1 SHA1 fbe9aa6e2d537c6881587a5a9572bf75426ca55e SHA256 dde8cd8ba2769211f0d9585ce0cea34714b032fa50f5e63c03500bd67050e744
 EBUILD gentoo-bashcomp-20080521-r1.ebuild 996 RMD160 58392acc3fcc08f708da2887f54f04ddce5f080e SHA1 a4b032f693a5dc9f21b98481bdf89e93345827c3 SHA256 74dd84d28694662cf982f30d63c4d45eca9c4f900db665eac0f7aabd2e0e864e
 EBUILD gentoo-bashcomp-20080521.ebuild 996 RMD160 e6dba5316edee6149f1faefe92cfb5ec782045c8 SHA1 1c76fba51bc72a85330c63780738535ab28c3cda SHA256 a4ea724918c3416eac9eb2db12cc39c51b2d88572e5aeee5e509165dccde647c
-MISC ChangeLog 3539 RMD160 08367e83686c49ca67553060553b7afc5cb20c8b SHA1 165b312fa6ddc5ab269bdfe7b8dab45d1ce303ea SHA256 98c9112cb71181f996b00c0bccff628864e30a0e479329cbd3bedd1247bf4c7e
+EBUILD gentoo-bashcomp-20090222.ebuild 1137 RMD160 81bfb798bd176c22dee3d3555cd027362200a64f SHA1 813c9a9a5d545a27beda39e65156651c55c16ae2 SHA256 76d65a998f2136f4489851fe2852a606b8db2387c1a673859cf29dc7080c198b
+MISC ChangeLog 3755 RMD160 f42528f309c27f148f65831ab7cfa6d0b74459ef SHA1 73d46694507a179df2faa1a47e978073a4f23cad SHA256 18b3082b41132493ea5c1585003c78f2ee5e3ab34647430958eae80929615098
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
